2001-10-06  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* reference/libgnome-docs.sgml: More rearrangement.
	* reference/tmpl/gnome-triggers.sgml: Documentation updates.

e001-10-05  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* reference/libgnome-docs.sgml: Added some structure to the main
	page.
	* reference/libgnome-sections.txt: Reordered some stuff. Hid
	some private stuff. Removed gnome-preferences altogether.
	* reference/tmpl/gnome-config.sgml:
	* reference/tmpl/gnome-gconf.sgml:
	* reference/tmpl/gnome-help.sgml:
	* reference/tmpl/gnome-i18n.sgml:
	* reference/tmpl/gnome-score.sgml:
	* reference/tmpl/gnome-sound.sgml:
	* reference/tmpl/gnome-url.sgml: Documentation updates.

2001-10-04  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* reference/Makefile.am: detect deprecated functions.
	* reference/libgnome-sections.txt: reordering.
	* doc/reference/tmpl/gnome-exec.sgml:
	* doc/reference/tmpl/gnome-gconf.sgml:
	* doc/reference/tmpl/gnome-i18n.sgml:
	* doc/reference/tmpl/gnome-program.sgml:
	* doc/reference/tmpl/gnome-util.sgml: documentation updates.

2001-09-09  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* reference/libgnome-sections.txt: Hide some things, reorganise
	  some orderings.

	* reference/tmpl/gnome-init.sgml,
	* reference/tmpl/gnome-program.sgml: Begin filling in details.

	* reference/tmpl/.cvsignore,
	* reference/tmpl/libgnome-unused.sgml: The "-unused" file is
	  going to be annoying until things have settled down, so remove
	  it for now at least.

	* reference/*: Add the beginnings of the API reference manual.
	  Nothing of substance in here yet, but it builds correctly.

2001-05-10  Martin Baulig  <baulig@suse.de>

	* depends.dia: Moved this to the gnome-2-plan module.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* Porting-1.0-2.0.txt: Added info about the `gnome_*_file'
	functions.

2001-03-21  Martin Baulig  <baulig@suse.de>

	* Porting-1.0-2.0.txt: Added the libgnome section from
	our porting document here.
