@@ -103,24 +103,32 @@ gnome_config_set_string
 gnome_config_set_translated_string
 gnome_config_private_set_string
 gnome_config_private_set_translated_string
+
+<SUBSECTION>
 gnome_config_get_int
 gnome_config_get_int_with_default
 gnome_config_private_get_int
 gnome_config_private_get_int_with_default
 gnome_config_set_int
 gnome_config_private_set_int
+
+<SUBSECTION>
 gnome_config_get_float
 gnome_config_get_float_with_default
 gnome_config_private_get_float
 gnome_config_private_get_float_with_default
 gnome_config_set_float
 gnome_config_private_set_float
+
+<SUBSECTION>
 gnome_config_get_bool
 gnome_config_get_bool_with_default
 gnome_config_private_get_bool
 gnome_config_private_get_bool_with_default
 gnome_config_set_bool
 gnome_config_private_set_bool
+
+<SUBSECTION>
 gnome_config_get_vector
 gnome_config_get_vector_with_default
 gnome_config_private_get_vector
@@ -128,6 +136,8 @@ gnome_config_private_get_vector_with_default
 gnome_config_set_vector
 gnome_config_private_set_vector
 gnome_config_assemble_vector
+
+<SUBSECTION>
 gnome_config_has_section
 gnome_config_private_has_section
 gnome_config_init_iterator
@@ -135,6 +145,8 @@ gnome_config_private_init_iterator
 gnome_config_init_iterator_sections
 gnome_config_private_init_iterator_sections
 gnome_config_iterator_next
+
+<SUBSECTION>
 gnome_config_drop_all
 gnome_config_sync
 gnome_config_sync_file
@@ -207,7 +219,6 @@ gnome_url_error_quark
 <SECTION>
 <FILE>gnome-util</FILE>
 gnome_is_program_in_path
-g_concat_dir_and_file
 g_extension_pointer
 gnome_util_prepend_user_home
 gnome_util_home_file
@@ -215,6 +226,9 @@ gnome_util_user_shell
 gnome_setenv
 gnome_unsetenv
 gnome_clearenv
+
+<SUBSECTION>
+g_concat_dir_and_file
 g_file_exists
 g_unix_error_string
 gnome_util_user_home
