@@ -14,6 +14,7 @@ infrastructures can be included in the future.
 These functions also allow for the fact that no sound may be supported on the
 current platform. So applications can safely call these functions to play
 sounds and they will just quietly return if no action is possible.
+</para>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
