@@ -2,12 +2,22 @@
 gnome-util
 
 <!-- ##### SECTION Short_Description ##### -->
-
+Miscellaneous utility functions.
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
-
+The functions in this section provide some shortcuts to finding certain file
+paths. There are also some functions for manipulating environment variables for
+those systems that do not have <function>getenv()</function> and similar
+functions.
 </para>
+<note>
+   <para>
+   Many of the function in here are now deprecated in favour of similar
+   functions in glib. The preferred replacement function in those cases is
+   indicated below.
+   </para>
+</note>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
@@ -23,16 +33,6 @@ gnome-util
 @Returns: 
 
 
-<!-- ##### MACRO g_concat_dir_and_file ##### -->
-<para>
-
-</para>
-
-@dir: 
-@file: 
-@Returns: 
-
-
 <!-- ##### FUNCTION g_extension_pointer ##### -->
 <para>
 
@@ -44,18 +44,24 @@ gnome-util
 
 <!-- ##### MACRO gnome_util_prepend_user_home ##### -->
 <para>
-
+Prepends the home directory of the user to a filename.
 </para>
 
-@x: 
+@x: A relative filename in the user's home directory.
+Returns: A string containing @x with the user's home directory path prepended.
+The string should be freed with g_free() when no longer required.
 
 
 <!-- ##### MACRO gnome_util_home_file ##### -->
 <para>
-
+Similar to gnome_util_prepend_user_home, except that "/home/fred/.gnome",
+instead of just "/home/fred/" is put on the front.
 </para>
 
-@afile: 
+@afile:  A filename relative to the user's .gnome directory.
+Returns: A string containing @afile with the user's home directory path  and
+"/.gnome" prepended. The string should be freed with g_free() when no longer
+required.
 
 
 <!-- ##### FUNCTION gnome_util_user_shell ##### -->
@@ -92,114 +98,152 @@ gnome-util
 
 
 
-<!-- ##### MACRO g_file_exists ##### -->
+<!-- ##### MACRO g_concat_dir_and_file ##### -->
 <para>
-
+Programs should use g_build_filename() instead of this function.
 </para>
 
-@filename: 
+@dir: Directory name.
+@file: Filename.
+@Returns: A newly allocated string that is the concatenation of @dir and @file,
+with seperators appropriate for the filesystem automatically taken care of.
+
+
+<!-- ##### MACRO g_file_exists ##### -->
+<para>
+Programs should use g_file_test(@filename, G_FILE_TEST_EXISTS) instead of this
+function.
+</para>
+
+@filename: Filename.
+@Returns: Returns %TRUE if @filename exists, %FALSE otherwise.
 
 
 <!-- ##### MACRO g_unix_error_string ##### -->
 <para>
-
+Programs should use g_strerror() instead of this function. Also, note that the
+returned string is only valid until the next call to g_strerror() or
+g_unix_error_string().
 </para>
 
-@error_num: 
+@error_num: A system error number (see C #errno documentation for more info).
+@Returns: A string describing the error code.
 
 
 <!-- ##### MACRO gnome_util_user_home ##### -->
 <para>
-
+Programs should use g_get_home_dir() instead of this function.
 </para>
 
+@Returns: The current user's home directory.
 
 
 <!-- ##### MACRO g_copy_vector ##### -->
 <para>
-
+Use g_strdupv() instead of this function.
 </para>
 
-@vec: 
+@vec: An array of strings. %NULL terminated.
+@Returns: A copy of the %NULL-terminated string array.
 
 
 <!-- ##### MACRO gnome_libdir_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+library directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_datadir_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+data directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_sound_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+sound files directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_pixmap_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+pixmap directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_config_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+config directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_unconditional_libdir_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+library directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_unconditional_datadir_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+data directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_unconditional_sound_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+sound files directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_unconditional_pixmap_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+pixmap directory (not the application's directory).
 
 
 <!-- ##### MACRO gnome_unconditional_config_file ##### -->
 <para>
-
+Programs should use gnome_program_locate_file() instead of this function.
 </para>
 
-@f: 
+@f: Filename.
+@Returns: A full path to the file @f that is stored in the system's GNOME
+config directory (not the application's directory).
 
 
