@@ -1,6 +1,7 @@
 2001-10-06 Malcolm Tredinnick <malcolm@commsecure.com.au>
 
-	* gnome-triggers.c, gnome-triggers.h: Documentation updates.
+	* gnome-program.c, gnome-triggers.c, gnome-triggers.h:
+	* gnome-util.c: Documentation updates.
 
 2001-10-05 Malcolm Tredinnick <malcolm@commsecure.com.au>
 
