@@ -1,7 +1,9 @@
 2001-10-06  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* reference/libgnome-docs.sgml: More rearrangement.
+	* reference/tmpl/gnome-sound.sgml: Fixed a typo
 	* reference/tmpl/gnome-triggers.sgml: Documentation updates.
+	* reference/tmpl/gnome-util.sgml: Documentation updates.
 
 e001-10-05  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
